# apertium-eng-tel

./: .gitattributes  .gitignore  Makefile.am  apertium-eng-tel.eng-tel.dix  apertium-eng-tel.tel.lexc  apertium-eng-tel.tel.twol  configure.ac  modes.xml
test/: eng-tel-biltrans-expected.txt  eng-tel-chunker-expected.txt  eng-tel-disam-expected.txt  eng-tel-generator-expected.txt  eng-tel-input.txt  eng-tel-morph-expected.txt  eng-tel-postchunk-expected.txt  eng-tel-tagger-expected.txt  tel-eng-biltrans-expected.txt  tel-eng-chunker-expected.txt  tel-eng-generator-expected.txt  tel-eng-input.txt  tel-eng-morph-expected.txt  tel-eng-postchunk-expected.txt  tel-eng-tagger-expected.txt  tests.json
